# seedmixer

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  cliff.toml  common.nix  devenv.yaml  flake.nix
.github/workflows/: binary-release.yml  docs.yml  release.yml  tails-release.yml
data/words/fra/: words.txt
data/words/ita/: words.txt
data/words/jpn/: words.txt
data/words/kor/: words.txt
data/words/spa/: words.txt
docs/: book.toml
docs/po/: messages.pot
docs/src/: SUMMARY.md  introduction.md  supportedlanguages.md
docs/src/ancillaries/: ancillaries.md  shredding.md  wordlists.md
docs/src/installation/: binaries.md  installation.md  source.md  tailsos.md
docs/src/methods/: encryption.md  obfuscation.md  shamir.md
docs/src/non-encrypted-shares/: mixing.md
docs/src/usage/: pins.md  usage.md
docs/src/usage/encrypted-shares/: encrypted-shares.md
docs/src/usage/encrypted-shares/encryption-phrase/: encryption-phrase.md  mixing.md  unmixing.md
docs/src/usage/encrypted-shares/generated-key/: generated-key.md  mixing.md  unmixing.md
docs/src/usage/non-encrypted-shares/: mixing.md  non-encrypted-shares.md  unmixing.md
docs/src/videos/: installation.md  usage.md
docs/theme/: extra.js  head.hbs  index.hbs
rust/: CHANGELOG.md  Cargo.toml  default.nix
rust/proptest-regressions/: obfuscation.txt  seed.txt  shamir.txt
rust/src/: lib.rs
rust/src/ascii/: mod.rs
rust/src/cli/: mod.rs
rust/src/collection/: mod.rs  seed.rs  share.rs
rust/src/crypt/: mod.rs
rust/src/data/words/zho-hant/: words.txt
rust/src/errors/: mod.rs
rust/src/mix/: mod.rs
rust/src/obfuscation/: mod.rs
rust/src/seed/: mod.rs
rust/src/shamir/: mod.rs
rust/src/shred/: mod.rs
rust/src/storage/: mod.rs  seed.rs  share.rs
rust/src/words/: mod.rs
rust/tests/: integration.proptest-regressions  integration.rs
